haciendo el dashboard

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "preact": "^10.27.0",
+    "preact-iso": "^2.6.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
